--- a/src/App.css
+++ b/src/App.css
@@ -107,6 +107,21 @@
 
 
 /* ABOUT ME */
+.headshotContainer {
+  width: 250px;
+  height: 250px;
+  overflow: hidden;
+  position: relative;
+  border-radius: 50%;
+}
+
+.headshotPhoto {
+  width: 100%;
+  height: auto;
+  position: relative;
+  top: -110px;
+}
+
 .introduction {
   font-size: 2em;
 }
@@ -172,6 +187,18 @@
 /* FOR FUN */
 .funText {
   font-size: 1.8em;
+  padding-bottom: 40px;
+}
+
+.youtube {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+}
+
+.youtubeText {
+  font-size: 1.5em;
+  padding-top: 15px;
 }
 
 
